# Caterpillar-Rover-iitm

./: IMPLEMENTATION_PLAN.md  README.md
Crater_Detection/: Explanation of CV model deployed in RPI.m4a  Hailo_Inference.py  requirements.txt  untitled_1.py
blitz/: CMakeLists.txt
blitz/blitz/: blitz_node.py  interfaces.py  mock_esp.py  packer.py  parser.py
blitz/demo/: blitz_demo.py
log/: latest_list
mcu_pio/: controller_esp32.txt  platformio.ini
mcu_pio/include/: include_all.cpp
mcu_pio/include/constants/: constants.cpp
mcu_pio/include/functions/: encoder_reader.cpp  servo_controller.cpp  store_data.cpp  timer_cb.cpp  velocity_converter.cpp
mcu_pio/include/pinmap/: caterpillar_pins.h
mcu_pio/lib/Blitz/: blitz.hpp  blitz_interfaces.hpp
mcu_pio/src/: Codes.txt  main.cpp
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/msg/: ActuatorCmd.msg  BnoReading.msg  Counter.msg  EncoderRaw.msg  LimitSwitches.msg  ModeSwitch.msg  Odom.msg  ServoCmd.msg  Velocity.msg
rover/: package.xml  setup.py
rover/launch/: autonomous.launch.py  manual.launch.py
rover/rover/: aruco.py  auto_map_saver.py  auto_mission.py  camera_servo_node.py  excavation_node.py  ml_bridge.py  ml_pipeline.py  mode_manager.py  odom_node.py  servo_test.py  simple_excavation.py  velocity_bridge.py
